# TESTE1

./: .gitignore  README.md  pyproject.toml
src/hypercompressor/: __init__.py  cli.py  core.py  strategies.py
src/powrar/: __init__.py  __main__.py  compression.py  gui.py
tests/: test_compression.py  test_roundtrip.py
